[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "vehicle-simulation-environment"
dynamic = ["version"]
dependencies = [
  "numpy",
]
readme = "README.md"

[project.optional-dependencies]
dev = [
  "ruff",
  "black",
  "pre-commit",
  "pytest",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "vehicle_simulation_environment/version.py"

[tool.hatch.build]
artifacts = [
  "vehicle_simulation_environment/version.py",
]

[tool.hatch.build.targets.wheel]
packages = [
  "vehicle_simulation_environment",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
]

[project.scripts]
vehicle-simulation-environment = "vehicle_simulation_environment.__main__:main"
